Setup for level2

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-TODO
+<!DOCTYPE html>
+<html>
+<body style="background-color:#474174;">
+
+<h1>Welcome to level 2. Dig deeper in this user.</h1>
+
+</body>
+</html>
